--- a/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.html
+++ b/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.html
@@ -207,7 +207,7 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#MuxedUpgrade"
     title="MuxedUpgrade = ref object of Upgrade
-  muxers*: Table[string, MuxerProvider]
+  muxers*: seq[MuxerProvider]
   streamHandler*: StreamHandler">MuxedUpgrade</a></li>
 
   </ul>
@@ -226,12 +226,10 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">new
-      <li><a class="reference" href="#new%2CtypeMuxedUpgrade%2CIdentify%2CTable%5Bstring%2CMuxerProvider%5D%2CopenArray%5BSecure%5D%2CConnManager%2CMultistreamSelect"
-    title="new(T: type MuxedUpgrade; identity: Identify;
-    muxers: Table[string, MuxerProvider];
+      <li><a class="reference" href="#new%2CtypeMuxedUpgrade%2CIdentify%2Cseq%5BMuxerProvider%5D%2CopenArray%5BSecure%5D%2CConnManager%2CMultistreamSelect"
+    title="new(T: type MuxedUpgrade; identity: Identify; muxers: seq[MuxerProvider];
     secureManagers: openArray[Secure] = []; connManager: ConnManager;
-    ms: MultistreamSelect): T:type">new(T: type MuxedUpgrade; identity: Identify;
-    muxers: Table[string, MuxerProvider];
+    ms: MultistreamSelect): T:type">new(T: type MuxedUpgrade; identity: Identify; muxers: seq[MuxerProvider];
     secureManagers: openArray[Secure] = []; connManager: ConnManager;
     ms: MultistreamSelect): T:type</a></li>
 
@@ -284,7 +282,7 @@ class="link-seesrc" target="_blank">Source</a>
 <dl class="item">
 <div id="MuxedUpgrade" class="tohide">
 <dt><pre><a href="muxedupgrade.html#MuxedUpgrade"><span class="Identifier">MuxedUpgrade</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="../peerstore.html#Upgrade"><span class="Identifier">Upgrade</span></a>
-  <span class="Identifier">muxers</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">,</span> <a href="../muxers/muxer.html#MuxerProvider"><span class="Identifier">MuxerProvider</span></a><span class="Other">]</span>
+  <span class="Identifier">muxers</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="../muxers/muxer.html#MuxerProvider"><span class="Identifier">MuxerProvider</span></a><span class="Other">]</span>
   <span class="Identifier">streamHandler</span><span class="Operator">*</span><span class="Other">:</span> <a href="../muxers/muxer.html#StreamHandler"><span class="Identifier">StreamHandler</span></a>
 </pre></dt>
 <dd>
@@ -310,9 +308,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.nim#L30"
+href="https://github.com/status-im/nim-libp2p/tree/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.nim#L35"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L30" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L35" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -324,24 +322,23 @@ class="link-seesrc" target="_blank">Source</a>
 
 mux outgoing connection
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.nim#L45"
+href="https://github.com/status-im/nim-libp2p/tree/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.nim#L50"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L45" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L50" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
-<div id="new,typeMuxedUpgrade,Identify,Table[string,MuxerProvider],openArray[Secure],ConnManager,MultistreamSelect" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeMuxedUpgrade%2CIdentify%2CTable%5Bstring%2CMuxerProvider%5D%2CopenArray%5BSecure%5D%2CConnManager%2CMultistreamSelect"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">MuxedUpgrade</span><span class="Other">;</span> <span class="Identifier">identity</span><span class="Other">:</span> <a href="../protocols/identify.html#Identify"><span class="Identifier">Identify</span></a><span class="Other">;</span>
-         <span class="Identifier">muxers</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">,</span> <a href="../muxers/muxer.html#MuxerProvider"><span class="Identifier">MuxerProvider</span></a><span class="Other">]</span><span class="Other">;</span>
+<div id="new,typeMuxedUpgrade,Identify,seq[MuxerProvider],openArray[Secure],ConnManager,MultistreamSelect" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeMuxedUpgrade%2CIdentify%2Cseq%5BMuxerProvider%5D%2CopenArray%5BSecure%5D%2CConnManager%2CMultistreamSelect"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">MuxedUpgrade</span><span class="Other">;</span> <span class="Identifier">identity</span><span class="Other">:</span> <a href="../protocols/identify.html#Identify"><span class="Identifier">Identify</span></a><span class="Other">;</span> <span class="Identifier">muxers</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="../muxers/muxer.html#MuxerProvider"><span class="Identifier">MuxerProvider</span></a><span class="Other">]</span><span class="Other">;</span>
          <span class="Identifier">secureManagers</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><a href="../protocols/secure/secure.html#Secure"><span class="Identifier">Secure</span></a><span class="Other">]</span> <span class="Other">=</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">connManager</span><span class="Other">:</span> <span class="Identifier">ConnManager</span><span class="Other">;</span>
          <span class="Identifier">ms</span><span class="Other">:</span> <a href="../multistream.html#MultistreamSelect"><span class="Identifier">MultistreamSelect</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.nim#L197"
+href="https://github.com/status-im/nim-libp2p/tree/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.nim#L202"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L197" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L202" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -358,9 +355,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.nim#L111"
+href="https://github.com/status-im/nim-libp2p/tree/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.nim#L116"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L111" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L116" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -372,9 +369,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.nim#L83"
+href="https://github.com/status-im/nim-libp2p/tree/yamuxMetrics/libp2p/upgrademngrs/muxedupgrade.nim#L88"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L83" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/upgrademngrs/muxedupgrade.nim#L88" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -393,7 +390,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-28 10:51:18 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-28 11:24:56 UTC</small>
       </div>
     </div>
   </div>
