--- a/autonat/libp2p/dialer.html
+++ b/autonat/libp2p/dialer.html
@@ -241,6 +241,13 @@ window.addEventListener("DOMContentLoaded", main2);
     title="addTransport(self: Dialer; t: Transport)">addTransport(self: Dialer; t: Transport)</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">canDial
+      <li><a class="reference" href="#canDial.e%2CDialer%2CPeerId%2Cseq%5BMultiAddress%5D"
+    title="canDial(self: Dialer; peerId: PeerId; addrs: seq[MultiAddress]): Future[
+    MultiAddress]">canDial(self: Dialer; peerId: PeerId; addrs: seq[MultiAddress]): Future[
+    MultiAddress]</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">connect
       <li><a class="reference" href="#connect.e%2CDialer%2CPeerId%2Cseq%5BMultiAddress%5D"
     title="connect(self: Dialer; peerId: PeerId; addrs: seq[MultiAddress];
@@ -354,6 +361,20 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="canDial.e,Dialer,PeerId,seq[MultiAddress]" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#canDial.e%2CDialer%2CPeerId%2Cseq%5BMultiAddress%5D"><span class="Identifier">canDial</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="dialer.html#Dialer"><span class="Identifier">Dialer</span></a><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">;</span> <span class="Identifier">addrs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+    <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span>
+                    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+Create a protocol stream and in order to check if a connection is possible. Doesn't use the Connection Manager to save it. 
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/autonat/libp2p/dialer.nim#L184"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dialer.nim#L184" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="connect.e,Dialer,PeerId,seq[MultiAddress]" class="tohide">
 <dt><pre><span class="Keyword">method</span> <a href="#connect.e%2CDialer%2CPeerId%2Cseq%5BMultiAddress%5D"><span class="Identifier">connect</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="dialer.html#Dialer"><span class="Identifier">Dialer</span></a><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">;</span> <span class="Identifier">addrs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span>
                <span class="Identifier">forceDial</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span>
@@ -410,7 +431,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-29 22:31:53 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-29 22:42:25 UTC</small>
       </div>
     </div>
   </div>
